Added new project

--- a/index.html
+++ b/index.html
@@ -483,7 +483,8 @@
                                                 <div class="row">
                                                     <div class="col-6">
                                                         <a class="skill-title">
-                                                            <button class="btn btn-link collapsed skill-title" type="button"
+                                                            <button class="btn btn-link collapsed skill-title"
+                                                                    type="button"
                                                                     data-toggle="collapse"
                                                                     data-target="#collapseSix" title="Click to expand"
                                                                     aria-expanded="false" aria-controls="collapseSix">
@@ -627,6 +628,8 @@
                 <div class="col-sm-0 col-md-1 col-lg-2"></div>
                 <div class="col-sm-12 col-md-10 col-lg-8">
                     <div class="breaker"></div>
+
+                    <!-- Visit my Github -->
                     <table id="github-table">
                         <tr title="Visit my Github !!" class="social-row"
                             onmouseover="onMouseOver('github')"
@@ -700,6 +703,50 @@
 
                             <hr>
 
+                            <!-- Financier -->
+                            <div class="card" id="financier">
+                                <div class="card-header" id="githubSeven">
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="col-6 no-margin">
+                                                <a class="skill-title">
+                                                    <button class="btn btn-link collapsed skill-title" type="button"
+                                                            data-toggle="collapse"
+                                                            data-target="#project-collapseSeven" title="Click to expand"
+                                                            aria-expanded="true" aria-controls="project-collapseSeven">
+                                                        Financier
+                                                    </button>
+                                                </a>
+                                                <p class="small skill-info">
+                                                    An expenditure management Android app
+                                                </p>
+                                            </div>
+                                            <div class="col-6 code-icons">
+                                                <i class="fab fa-android"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="project-collapseSeven" class="collapse" aria-labelledby="githubSeven"
+                                     data-parent="#github-projects">
+                                    <div class="card-body">
+                                        <p class="skill-highlights">
+                                            Financier is an Android application to manage expenditures. <br/>
+                                            Records all expenditures entered and analyzes them <br/>
+                                            Displays <b>stats</b> according to the expenditures entered. <br/>
+                                            Visualized expenditures into various charts using <b>AnyChartAndroid</b>
+                                            <br/>
+                                            <a href="https://github.com/A-Nikhil/Financier"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <hr>
                             <!-- Xenon OS -->
                             <div class="card" id="xenon-os">
                                 <div class="card-header" id="githubOne">
@@ -746,7 +793,7 @@
                             </div>
 
                             <hr>
-
+                            
                             <!-- Encrypto -->
                             <div class="card" id="encrypto">
                                 <div class="card-header" id="githubTwo">
@@ -930,8 +977,6 @@
                             </div>
 
                             <hr>
-
-                            <!-- Financier -->
                         </div>
                     </div>
                 </div>
