Added New Project

--- a/index.html
+++ b/index.html
@@ -838,6 +838,48 @@
 
                             <hr>
 
+                            <!-- Competitive Coding Codebase -->
+                            <div class="card" id="competitive-coding">
+                                <div class="card-header" id="githubEight">
+                                    <div class="container-fluid">
+                                        <div class="row">
+                                            <div class="col-6 no-margin">
+                                                <a class="skill-title">
+                                                    <button class="btn btn-link collapsed skill-title" type="button"
+                                                            data-toggle="collapse"
+                                                            data-target="#project-collapseEight" title="Click to expand"
+                                                            aria-expanded="true" aria-controls="project-collapseSix">
+                                                        Competitive Coding ProblemSet
+                                                    </button>
+                                                </a>
+                                                <p class="small skill-info">
+                                                    Codes for various CC topics
+                                                </p>
+                                            </div>
+                                            <div class="col-6 code-icons">
+                                                <i class="fab fa-java"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="project-collapseEight" class="collapse" aria-labelledby="githubEight"
+                                     data-parent="#github-projects">
+                                    <div class="card-body">
+                                        <p class="skill-highlights">
+                                            Practice Questions from various competitive coding websites. <br/>
+                                            Problems categorized into different topics. <br/>
+                                            <a href="https://github.com/A-Nikhil/Competitive-Coding-Practice"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <hr>
+
                             <!-- IDEA Parallelization -->
                             <div class="card" id="idea">
                                 <div class="card-header" id="githubFour">
